--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
             </div>
-            <p class="fs-1"><strong>Boston Children's Hospital, </strong> <a href="https://www.fnndsc.org/" class="text-white-50">Fetal-Neonatal Neuroimaging Developmental Science Center (FNNDSC)</a> <br> Intern, 05/2020 - 09/2020</p>
+            <p class="fs-1"><strong>Boston Children's Hospital, </strong> <a href="https://www.fnndsc.org/" class="text-white-50">Fetal-Neonatal Neuroimaging and Developmental Science Center (FNNDSC)</a> <br> Intern, 05/2020 - 09/2020</p>
             <ul class="fs-1">
-                <li class="course-list">Built a Docker based plugin to run COVID-Net deep learning neuro network application on ChRIS (Children's Research Integration System), a web-based medical image processing platform.</li>
+                <li class="course-list">Built a Docker based plugin to run COVID-Net deep learning neural network application on ChRIS (Children's Research Integration System), a web-based medical image processing platform.</li>
                 <li class="course-list">Built a Docker based plugin to run FastSurfer, a deep learning based neuroimaging pipeline on ChRIS.</li>
                 <li class="course-list">Integrated the ChRIS plugins into Kubernetes cluster on the GENI (Global Environment for Network Innovations) cloud platform.</li>
             </ul>
