--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-lg-41 ml-auto" style="padding:8px">
                     <p class="lead">I'm Grace, currently a M.S. student in Computer Science in Boston University. 
-                        I'm expecting to graduate in Summer 2022.</p>
+                        I'm expecting to graduate in 2022.</p>
 
                     <p class="lead"> I work on web development and cloud native applications.</p>
                     <p class="lead"> I'm a quick learner and I love building new things.</p>
