--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             </div>
             <ul>
                 <li class="education-list">M.S. in Computer Science, Boston University, GPA: 4.0/4.0</li>
-                <li class="education-list">M.A. in Japanese, University of Massachusetts Amherst, GPA: 4.0/4.0</li>
-                <li class="education-list">B.A. in Japanese, Nankai University, GPA: 3.6/4.0</li>
+                <li class="education-list">Master's degree, University of Massachusetts Amherst, GPA: 4.0/4.0</li>
+                <li class="education-list">Bachelor's degree, Nankai University, GPA: 3.5/4.0</li>
             </ul>
         </div>
         </div>
