--- a/index.html
+++ b/index.html
@@ -53,10 +53,6 @@
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#courses">Courseworks</a>
                     </li>
-                    
-                    <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="grace_bian_resume.pdf"><i class="fa fa-download" aria-hidden="true"></i> Resume</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -92,11 +88,10 @@
                     <img class="masthead-avatar mb-5" src="./figs/avatar.jpg" align="center" width=380px alt="picture of me">
                 </div>
                 <div class="col-lg-41 ml-auto" style="padding:8px">
-                    <p class="lead">I'm Grace, currently a M.S. student in Computer Science in Boston University. 
-                        I'm expecting to graduate in 2022.</p>
+                    <p class="lead">I'm Grace, currently a M.S. student in Computer Science at Boston University. </p>
 
                     <p class="lead"> I work on web development and cloud native applications.</p>
-                    <p class="lead"> I'm a quick learner and I love building new things.</p>
+                    <p class="lead"> I'm a quick learner, team-player, and I love building new things.</p>
                     <br>
        
                     </div>
@@ -116,7 +111,7 @@
             </div>
             <ul class="fs-1">
                 <li ><strong>Programming:</strong> Java, Python, JavaScript <n> </li>
-                <li ><strong>Web Development:</strong> HTML5, CSS, REST, JavaScript, Vue.js, React, Bootstrap, NodeJS, SQL/NoSQL, Nginx</li>
+                <li ><strong>Web Development:</strong> HTML5, CSS, REST/GraphQL, JavaScript, Vue.js, React, Bootstrap, NodeJS, SQL/NoSQL, Nginx</li>
                 <li ><strong>Systems/Frameworks/Others:</strong> AWS, Docker, Kubernetes, Machine Learning, Git, Linux/Unix</li>
             </ul>
         </div>
@@ -131,11 +126,17 @@
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
             </div>
-            <p class="fs-1"><strong>Boston Children's Hospital, </strong> <a href="https://www.fnndsc.org/" class="text-white-50">Fetal-Neonatal Neuroimaging and Developmental Science Center (FNNDSC)</a> <br> Intern, 05/2020 - 09/2020</p>
+            <p class="fs-1"><strong>HubSpot, Inc. </strong> <a href="https://www.fnndsc.org/" class="text-white-50"></a> <br> Software Engineering Intern, 06/2022 - 08/2022</p>
+            <ul class="fs-1">
+                <li class="course-list">Worked in team to build a set of services to monitor and log HubSpot’s Kubernetes cluster activities.</li>
+                <li class="course-list">Built a timeline GraphQL API service for easy access of the container, pod and node events via Kubernetes API.</li>
+                <li class="course-list">Built an extended kubectl client CLI tool for querying Kubernetes timeline events and rendering the results as user-friendly view.</li>
+            </ul>
+            <p class="fs-1"><strong>Boston Children's Hospital, </strong> <a href="https://www.fnndsc.org/" class="text-white-50">Fetal-Neonatal Neuroimaging and Developmental Science Center (FNNDSC)</a> <br> Collaborative Project, 05/2020 - 09/2020</p>
             <ul class="fs-1">
                 <li class="course-list">Built a Docker based plugin to run COVID-Net deep learning neural network application on ChRIS (Children's Research Integration System), a web-based medical image processing platform.</li>
                 <li class="course-list">Built a Docker based plugin to run FastSurfer, a deep learning based neuroimaging pipeline on ChRIS.</li>
-                <li class="course-list">Integrated the ChRIS plugins into Kubernetes cluster on the GENI (Global Environment for Network Innovations) cloud platform.</li>
+                <li class="course-list">Integrated the ChRIS plugins into Kubernetes cluster on Massachusetts Open Cloud platform.</li>
             </ul>
         </div>
         </div>
@@ -151,7 +152,6 @@
             </div>
             <ul>
                 <li class="education-list">M.S. in Computer Science, Boston University, GPA: 4.0/4.0</li>
-                <li class="education-list">Master's degree, University of Massachusetts Amherst, GPA: 4.0/4.0</li>
                 <li class="education-list">Bachelor's degree, Nankai University, GPA: 3.5/4.0</li>
             </ul>
         </div>
@@ -225,6 +225,7 @@
                 <li class="course-list">Computer Information Processing </li>
                 <li class="course-list">Information Systems Analysis and Design </li>
                 <li class="course-list">Data Science with Python </li>
+                <li class="course-list">Database Design and Implementation </li>
             </ul>
         </div>
         </div>
@@ -235,12 +236,6 @@
     <footer class="footer text-center" style="box-shadow: 0px -4px 4px 2px rgba(0, 0, 0, 0.2);">
         <div class="container">
             <div class="row" style="padding-left:50px;padding-right:50px;">
-                <!-- Footer About Text -->
-                <div class="col">
-                    <h4 class="text-uppercase mb-4">Contact</h4>
-                    <p class="lead mb-0">xbian <em>at</em> bu <em>dot</em> edu
-                </div>
-
                 <!-- Footer Social Icons -->
                 <div class="col mb-5 mb-lg-0">
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/grace-bian-03140a220">
